# vehicle_models

./: .gitignore  .pre-commit-config.yaml  README.md  expected_data_two_dof.json  requirements.txt  requirements_dev.txt  setup.cfg  test_two_dof.txt  tox.ini
.github/: CODEOWNERS  workflow.yml
.github/workflows/: workflow.yml
UVEC/: __init__.py  __version__.py  copy_uvec.py  get_path_uvec.py
UVEC/uvec_ten_dof_vehicle_2D/: __init__.py  irregularities.py  newmark_solver.py  uvec.py
UVEC/uvec_ten_dof_vehicle_2D_hertz/: uvec.py
UVEC/uvec_two_dof_vehicle_2D/: __init__.py  uvec.py
docs/: refs.bib
spring_damper_model/: base_model.py  hertzian_contact.py  newmark_solver.py  uvec.py
ten_dof_vehicle_2D/: hertzian_contact.py  uvec.py
tests/: test_copy_package.py  test_irregularities.py  test_moving_vehicle.py  test_moving_vehicles.py  test_newmark.py  test_non_linear_iteration.py  test_solver.py  test_solvers.py  test_static_uvec.py  test_static_vehicle.py  test_two_dof.py  utils.py
tests/analytical_solutions/: moving_vehicle.py
tests/test_data/: expected_data_test_joint.json  expected_data_test_joint_static.json  expected_data_test_spring_damper.json  expected_data_test_spring_damper_irr.json  expected_data_test_spring_damper_with_irregularities.json  hinge.txt  hinge_1.txt  hinge_2.txt  irregularity.txt
uvec_ten_dof_vehicle_2D/: __init__.py  base_model.py  irregularities.py  newmark_solver.py  uvec.py
uvec_two_dof_vehicle_2D/: uvec.py
