[metadata]
name = UVEC
version = attr: ten_dof_vehicle_2D.__version__
author = attr: ten_dof_vehicle_2D.__author__
description = User defined VEhiCle models [UVEC]
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License ::BSD 3-Clause License
    Operating System :: OS Independent

[options]
packages =
    ten_dof_vehicle_2D
include_package_data = True
install_requires =
    numpy>=1.24
    matplotlib>=3.7.1
python_requires = >=3.8

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
