[metadata]
name = UVEC
version = attr: UVEC.__version__
author = attr: UVEC.__author__
description = User defined VEhiCle models [UVEC]
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix

[options]
packages =
    UVEC
    UVEC.uvec_ten_dof_vehicle_2D
    UVEC.uvec_two_dof_vehicle_2D
include_package_data = True
install_requires =
    numpy>=2.0.2
    matplotlib>=3.9.3
python_requires = >=3.9

[options.extras_require]
testing =
    pytest>=8.3
    pytest-cov>=6.0
    tox>=4.23
    mypy>=1.13
    yapf>=0.43
